--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^12.0.0",
-    "md5": "^2.3.0",
+    "koa-static": "^5.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.0"
   },
